Bug 480388 - Pdf printouts are unusable when using dark system theme
Summary: Pdf printouts are unusable when using dark system theme
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.3
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-27 11:53 UTC by mahead
Modified: 2024-09-14 16:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Unreadable white fonts (39.89 KB, application/pdf)
2024-01-27 11:53 UTC, mahead
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mahead 2024-01-27 11:53:08 UTC
Created attachment 165270 [details]
Unreadable white fonts

SUMMARY
***

STEPS TO REPRODUCE
1. Use Dark system theme within KDE settings
2. Open any report within KMyMoney
3. Use Print feature to print it as PDF file.

OBSERVED RESULT
The generated PDF file has white font with light background, making seeing details impossible. With light system theme everything works okay.

EXPECTED RESULT
PDF file is readable with black font, no matter which system theme is in use.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:  
(available in About System)
KDE Plasma Version: 5.27
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2024-08-17 17:23:45 UTC
Moved to 'general' components
Comment 2 Ralf Habacker 2024-09-14 16:18:08 UTC
Git commit 574aab1ca5e34161295a4be00d75db66a5b02ae8 by Ralf Habacker.
Committed on 14/09/2024 at 16:14.
Pushed by habacker into branch 'master'.

Limit item related css style to screen display

They collidates with printing.
FIXED-IN:5.2

M  +16   -16   kmymoney/html/kmymoney.css
M  +2    -0    kmymoney/kmymoneyutils.cpp

https://invent.kde.org/office/kmymoney/-/commit/574aab1ca5e34161295a4be00d75db66a5b02ae8