Limit item related css style to screen display

They collidates with printing.

BUG:480388
FIXED-IN:5.2